[package]
name = "datanode"
version = "0.1.0"
authors = ["Daniel Rammer <hamersaw@bushpath.com>"]
edition = "2018"

[dependencies]
byteorder = "1"
communication = {path = "../../../utilities-rs/communication" }
env_logger = "0.6"
crossbeam-channel = "0.3"
geohash = { path = "../../../utilities-rs/geohash" }
glob = "0.3"
hdfs-comm = { path = "../../../utilities-rs/hdfs-comm" }
hdfs-protos = { path = "../../../utilities-rs/hdfs-protos" }
log = "0.4"
prost = "0.5"
regex = "1.1"
shared = { path = "../shared" }
structopt = "0.2"
