[package]
name = "datanode"
version = "0.1.1"
authors = ["Daniel Rammer <hamersaw@bushpath.com>"]
edition = "2018"

[dependencies]
byteorder = "1"
comm = {path = "../../../comm-rs" }
env_logger = "0.6"
crossbeam-channel = "0.3"
geocode = { path = "../../../geocode-rs" }
glob = "0.3"
hdfs-comm = { path = "../../../hdfs-comm-rs" }
log = "0.4"
prost = "0.5"
regex = "1.1"
shared = { path = "../shared" }
structopt = "0.2"
