[package]
name = "namenode"
version = "0.1.2"
authors = ["Daniel Rammer <hamersaw@bushpath.com>"]
edition = "2018"

[dependencies]
bincode = "1.1"
bytes = "0.4"
comm = {path = "../../../comm-rs" }
env_logger = "0.6"
hdfs-comm = { path = "../../../hdfs-comm-rs" }
log = "0.4"
prost = "0.5"
radix = { path = "../../../radix-rs" }
rand = "0.6"
regex = "1.1"
serde = { version = "1.0", features = ["derive"] }
shared = { path = "../shared" }
structopt = "0.2"
