[package]
name = "shared"
version = "0.1.1"
authors = ["Daniel Rammer <hamersaw@bushpath.com>"]
edition = "2018"

build = "build.rs"

[dependencies]
bincode = "1.1"
bytes = "0.4"
glob = "0.3"
prost = "0.5"                  
radix = { path = "../../../radix-rs" }
regex = "1.1"

[build-dependencies]           
prost-build = "0.5"

[dev-dependencies]
rand = "0.6"
